[tool.poetry]
name = "arbmark-docs-aordningen"
version = "0.1.0"
description = "Dokumentasjonsnotat for lønns- og arbeidsmarkedsstatistikk."
authors = ["Øyvind Bruer-Skarsbø <obr@ssb.no>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
dapla-toolbelt = "^1.3.2"
pillow = "^10.0.1"
tabulate = "^0.9.0"
itables = "^1.5.2"
babel = "^2.12.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
ipykernel = "^6.15.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
